# magbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  apt_packages.txt  backup-devcontainer.json  docker-compose.yml  frames_2024-09-22_12.23.59.gv  frames_2024-09-23_12.24.23.gv  frames_2024-10-13_11.01.14.gv  frames_2025-02-12_09.02.37.gv  frames_2025-02-14_15.22.14.gv  ground_truth_export.csv  odom_export.csv  requirements.txt  run.sh  runRobot.sh  updateURDF.sh  updateURDFAndBuildGazebo.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.tests/: csv_to_tum.py  ground_truth.tum  ground_truth_interpolated.csv  interp.py  odom.tum  odom_interpolated.csv
log/: latest_build
rosbag2_2025_02_14-20_15_52/: metadata.yaml  rosbag2_2025_02_14-20_15_52_0.db3
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: ElectricalMeasurements.msg  JointSpace.msg
src/magbot/: package.xml  setup.py
src/magbot/launch/: magbot_service.launch.py
src/magbot/magbot/: magbot_driver.py  run_robot.py  status_publisher.py
src/magbot_control/: package.xml  setup.cfg  setup.py
src/magbot_control/magbot_control/: Config.py  Controller.py  Kinematics.py
src/magbot_control/resource/: converted-dingo-urdf.txt
src/magbot_description/: package.xml  setup.cfg  setup.py
src/magbot_gazebo/: package.xml  setup.cfg  setup.py
src/magbot_gazebo/config/: dingo_controllers.yaml
src/magbot_gazebo/description/backup/: dingo.urdf  dingo.urdf.xacro
src/magbot_gazebo/description/meshes/: model.config
src/magbot_gazebo/description/urdf/: dingo.urdf  dingo.urdf.xacro  dingo.urdf.xacro.txt  dingo_ros2_control.xacro  model.config  model.sdf
src/magbot_gazebo/description/worlds/: simple.world
src/magbot_gazebo/launch/: rsp.launch.py
src/magbot_gazebo/magbot_gazebo/: save_bag_to_csv.py
src/magbot_gazebo/rviz/: Basic.rviz  simple.rviz
src/magbot_hardware_interfacing/magbot_input_interfacing/: package.xml  setup.cfg  setup.py
src/magbot_hardware_interfacing/magbot_input_interfacing/launch/: magbot_keyboard_service.launch.py
src/magbot_hardware_interfacing/magbot_input_interfacing/magbot_input_interfacing/: InputInterface.py  Keyboard.py
src/magbot_hardware_interfacing/magbot_peripheral_interfacing/: package.xml  setup.cfg  setup.py
src/magbot_hardware_interfacing/magbot_peripheral_interfacing/launch/: magbot_lcd_service.launch.py
src/magbot_hardware_interfacing/magbot_peripheral_interfacing/magbot_peripheral_interfacing/: IMU.py  battery_voltage_checking.py  magbot_lcd_interfacing.py
src/magbot_hardware_interfacing/magbot_peripheral_interfacing/magbot_peripheral_interfacing/scripts/: LCD_1inch47.py  lcdconfig.py
src/magbot_hardware_interfacing/magbot_servo_interfacing/: package.xml  setup.cfg  setup.py
src/magbot_hardware_interfacing/magbot_servo_interfacing/magbot_servo_interfacing/: CalibrateServos.py  HardwareInterface.py  ServoCalibrationDefinition.py
src/magbot_utilities/: package.xml  setup.cfg  setup.py
